--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - mips-unknown-linux-musl
+          - mips-unknown-linux-gnu
           - mipsel-unknown-linux-musl
 
     steps:
