--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -47,6 +47,7 @@ jobs:
           shadowsocks_version="$(git describe --tags `git rev-list --tags --max-count=1`)"
           echo shadowsocks_version="$shadowsocks_version" >> "$GITHUB_ENV"
           git checkout $(git describe --tags `git rev-list --tags --max-count=1`)
+          sed -i 's/1.80/1.74/g' Cargo.toml
           cd build
           ./build-release -t ${{ matrix.target }} -f full -u
           cd release
